# Rust_Programs

./: README.md
ActixWeb/: Cargo.toml  credentials
ActixWeb/src/: main.rs
ActixWeb/src/api/: task.rs
C++/: README.md
Java/: README.md
Python/: README.md
Python/Django/social_Web/: README.md  db.sqlite3  manage.py
Python/Django/social_Web/social_web/: asgi.py  settings.py  urls.py  wsgi.py
Python/Django/social_Web/src/: admin.py  models.py  urls.py  views.py
Python/Django/social_Web/src/migrations/: 0001_initial.py  0002_post.py  0003_followerscount_likepost.py
Python/Django/social_Web/templates/: setting.html  signup.html
Python/SpilledCoffee/Database-main/: test.csv  test_cust_order.csv
Python/SpilledCoffee/Database-main/Old Database/: CustomerOrderDataBase.java  DataBase.java  EntryItem.java  InventoryUpdator.java  OrderItem.java  inventory_team1.csv  test_orders.csv
Python/SpilledCoffee/Database-main/web-app/: README.md  cart-grid.php  cart.php  checkout-form.php  checkout.php  footer.php  header-ns.php  header.php  index.php  login-form.php  login.php  modal.php  orders.php  products-grid-item.php  products-grid.php  products.php  signup-form.php  signup.php
Python/SpilledCoffee/Database-main/web-app-v2/: README.md
Python/SpilledCoffee/Database-main/web-app-v2/app/: bootstrap.php
Python/SpilledCoffee/Database-main/web-app-v2/public/: index.php
Python/SpilledCoffee/work-main/: assign5.py
Rust/: README.md
Rust/ActixWeb/: README.md
Rust/ActixWeb/src/model/: task.rs
Rust/ActixWeb/src/repository/: ddb.rs
(+81 files in other folders)
